@@ -165,6 +165,8 @@
                     <child>
                       <object class="GtkLabel" id="label_downsize">
                         <property name="visible">True</property>
+			<property name="label">
+</property>
                         <property name="xalign">0</property>
                       </object>
                       <packing>
