@@ -14,6 +14,8 @@ update-manager (1:0.131) UNRELEASED; urgency=low
       UI responsive
   * AutoUpgradeTester/install_blacklist.cfg:
     - add ec2 to the blacklist for the kvm based testing
+  * UpdateManager/UpdateManager.py:
+    - show selected and download size in two rows (LP: #434062)
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 03 Nov 2009 16:05:01 +0100
 
